syntax = "proto3";

option go_package = "github.com/0glabs/0g-data-avail/api/grpc/encoder";
package encoder;

service Encoder {
  rpc EncodeBlob(EncodeBlobRequest) returns (EncodeBlobReply) {}
}

// EncodeBlobRequest contains data and pre-computed encoding params provided to Encoder
message EncodeBlobRequest {
  bytes data = 1;
  uint32 cols = 2;
}

// EncodeBlobReply 
message EncodeBlobReply {
  uint32 rows = 1;
  uint32 cols = 2;
  bytes commitment = 3;
  bytes chunks = 4;
}